[project]
name = "multiparser"
version = "1.0.5"
description = "Multiple File Parser for monitoring and processing updates to a given set of output files."
authors = [
    {name = "Kristian Zarębski",email = "kristian.zarebski@ukaea.uk"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Typing :: Typed"
]
keywords = [
    "parsing",
    "monitoring",
    "logging"
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "toml (>=0.10.2,<0.11.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "flatdict (>=4.0.1,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]

[project.urls]
Documentation = "https://ukaea.github.io/Multiparser/"
Repository = "https://github.com/ukaea/Multiparser"
Issues = "https://github.com/ukaea/Multiparser/issues"
"Change Log" = "https://github.com/ukaea/Multiparser/blob/main/CHANGELOG.md"

[project.optional-dependencies]
arrow = ["pyarrow (>=19.0.0,<20.0.0)", "pandas (>=2.2.3,<3.0.0)"]
fortran = ["f90nml (>=1.4.4,<2.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.testing.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
xeger = "^0.4.0"
pytest-mock = "^3.14.0"
pandas = "^2.2.3"


[tool.poetry.group.quality.dependencies]
bandit = "^1.8.2"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.50"
pymdown-extensions = "^10.14.2"
mkdocs-mermaid2-plugin = "^1.2.1"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
mktestdocs = "^0.2.4"
mkdocstrings = "^0.27.0"
mike = "^2.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
mypy = "^1.14.1"
pandas-stubs = "^2.2.3.241126"
types-toml = "^0.10.8.20240310"
types-pyyaml = "^6.0.12.20241230"
ruff = "^0.9.3"
interrogate = "^1.7.0"

[tool.ruff]
lint.extend-select = ["C901"]
lint.mccabe.max-complexity = 11

[tool.pytest.ini_options]
addopts = "-p no:warnings --cov=multiparser"
testpaths = [
    "tests"
]
markers = [
    "parsing: tests of parsing functions for files",
    "monitor: tests of the file monitor",
    "scenario: tests for scenarios"
]

[tool.interrogate]
ignore-init-method = true
fail-under = 95
verbose = 1
exclude = ["docs", "tests", "multiparser/typing.py"]
