[project]
name = "multiparser"
version = "1.0.6"
description = "Multiple File Parser for monitoring and processing updates to a given set of output files."
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
    {name = "Kristian Zarębski",email = "kristian.zarebski@ukaea.uk"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Typing :: Typed"
]
keywords = [
    "parsing",
    "monitoring",
    "logging"
]
license = {text = "MIT"}
dependencies = [
    "flatdict>=4.0.1",
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
    "toml>=0.10.2",
]

[project.optional-dependencies]
arrow = [
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
]
fortran = [
    "f90nml>=1.4.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.250308",
    "ruff>=0.11.10",
    "types-pyyaml>=6.0.12.20250516",
    "types-toml>=0.10.8.20240310",
    "bandit>=1.8.3",
]
docs = [
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocs-material>=9.6.14",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocstrings>=0.29.1",
    "mktestdocs>=0.2.4",
    "pymdown-extensions>=10.15",
]
testing = [
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "xeger>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.extend-select = ["C901"]
lint.mccabe.max-complexity = 11

[tool.pytest.ini_options]
addopts = "-p no:warnings --cov=multiparser"
testpaths = [
    "tests"
]
markers = [
    "parsing: tests of parsing functions for files",
    "monitor: tests of the file monitor",
    "scenario: tests for scenarios"
]

[tool.interrogate]
ignore-init-method = true
fail-under = 95
verbose = 1
exclude = ["docs", "tests", "multiparser/typing.py"]
